# brasileirao-study

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/reference/: stadiums.csv
docs/: chapter-a-home-advantage.md  chapter-b-unpredictability.md  chapter-c-exodus.md
notebooks/: 01_data_overview.ipynb  02_home_advantage_story.ipynb  03_model_and_shap.ipynb  04_cross_league_data.ipynb  05_unpredictability_and_balance.ipynb  06_transfer_data.ipynb  07_exodus_event_study.ipynb
reports/social/: make_social_charts.py  post1-ready-to-publish.md
src/brasileirao/: analysis.py  balance.py  exodus.py  features.py  geo.py  ingest.py  leagues.py  model.py  paths.py  plotting.py  ratings.py  standings.py  transfers.py
tests/: test_analysis.py  test_balance.py  test_exodus.py  test_features.py  test_geo.py  test_ingest.py  test_leagues.py  test_model.py  test_paths.py  test_ratings.py  test_standings.py  test_transfers.py
